// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading basic render 1`] = `
<HeadingLevel>
  <Heading>
    <Block
      as="h1"
      color="contentPrimary"
      data-baseweb="heading"
      font="font1050"
    >
      <Block
        as="h1"
        color="contentPrimary"
        data-baseweb="heading"
        font="font1050"
        forwardedRef={null}
      >
        <ForwardRef
          $as="h1"
          $color="contentPrimary"
          $font="font1050"
          data-baseweb="heading"
        >
          <MockStyledComponent
            $as="h1"
            $color="contentPrimary"
            $font="font1050"
            data-baseweb="heading"
            forwardedRef={null}
          >
            <div
              data-baseweb="heading"
              styled-component="true"
              test-style={
                Object {
                  "color": "$theme.colors.contentPrimary",
                  "fontFamily": "$theme.typography.font1050.fontFamily",
                  "fontSize": "$theme.typography.font1050.fontSize",
                  "fontWeight": "$theme.typography.font1050.fontWeight",
                  "lineHeight": "$theme.typography.font1050.lineHeight",
                }
              }
            >
              Base Web [L1]
            </div>
          </MockStyledComponent>
        </ForwardRef>
      </Block>
    </Block>
  </Heading>
  <HeadingLevel>
    <Heading>
      <Block
        as="h2"
        color="contentPrimary"
        data-baseweb="heading"
        font="font950"
      >
        <Block
          as="h2"
          color="contentPrimary"
          data-baseweb="heading"
          font="font950"
          forwardedRef={null}
        >
          <ForwardRef
            $as="h2"
            $color="contentPrimary"
            $font="font950"
            data-baseweb="heading"
          >
            <MockStyledComponent
              $as="h2"
              $color="contentPrimary"
              $font="font950"
              data-baseweb="heading"
              forwardedRef={null}
            >
              <div
                data-baseweb="heading"
                styled-component="true"
                test-style={
                  Object {
                    "color": "$theme.colors.contentPrimary",
                    "fontFamily": "$theme.typography.font950.fontFamily",
                    "fontSize": "$theme.typography.font950.fontSize",
                    "fontWeight": "$theme.typography.font950.fontWeight",
                    "lineHeight": "$theme.typography.font950.lineHeight",
                  }
                }
              >
                Introduction [L2]
              </div>
            </MockStyledComponent>
          </ForwardRef>
        </Block>
      </Block>
    </Heading>
    <HeadingLevel>
      <Heading>
        <Block
          as="h3"
          color="contentPrimary"
          data-baseweb="heading"
          font="font850"
        >
          <Block
            as="h3"
            color="contentPrimary"
            data-baseweb="heading"
            font="font850"
            forwardedRef={null}
          >
            <ForwardRef
              $as="h3"
              $color="contentPrimary"
              $font="font850"
              data-baseweb="heading"
            >
              <MockStyledComponent
                $as="h3"
                $color="contentPrimary"
                $font="font850"
                data-baseweb="heading"
                forwardedRef={null}
              >
                <div
                  data-baseweb="heading"
                  styled-component="true"
                  test-style={
                    Object {
                      "color": "$theme.colors.contentPrimary",
                      "fontFamily": "$theme.typography.font850.fontFamily",
                      "fontSize": "$theme.typography.font850.fontSize",
                      "fontWeight": "$theme.typography.font850.fontWeight",
                      "lineHeight": "$theme.typography.font850.lineHeight",
                    }
                  }
                >
                  Quotes [L3]
                </div>
              </MockStyledComponent>
            </ForwardRef>
          </Block>
        </Block>
      </Heading>
      <HeadingLevel>
        <Heading>
          <Block
            as="h4"
            color="contentPrimary"
            data-baseweb="heading"
            font="font750"
          >
            <Block
              as="h4"
              color="contentPrimary"
              data-baseweb="heading"
              font="font750"
              forwardedRef={null}
            >
              <ForwardRef
                $as="h4"
                $color="contentPrimary"
                $font="font750"
                data-baseweb="heading"
              >
                <MockStyledComponent
                  $as="h4"
                  $color="contentPrimary"
                  $font="font750"
                  data-baseweb="heading"
                  forwardedRef={null}
                >
                  <div
                    data-baseweb="heading"
                    styled-component="true"
                    test-style={
                      Object {
                        "color": "$theme.colors.contentPrimary",
                        "fontFamily": "$theme.typography.font750.fontFamily",
                        "fontSize": "$theme.typography.font750.fontSize",
                        "fontWeight": "$theme.typography.font750.fontWeight",
                        "lineHeight": "$theme.typography.font750.lineHeight",
                      }
                    }
                  >
                    Subtitle [L4]
                  </div>
                </MockStyledComponent>
              </ForwardRef>
            </Block>
          </Block>
        </Heading>
        <HeadingLevel>
          <Heading>
            <Block
              as="h5"
              color="contentPrimary"
              data-baseweb="heading"
              font="font650"
            >
              <Block
                as="h5"
                color="contentPrimary"
                data-baseweb="heading"
                font="font650"
                forwardedRef={null}
              >
                <ForwardRef
                  $as="h5"
                  $color="contentPrimary"
                  $font="font650"
                  data-baseweb="heading"
                >
                  <MockStyledComponent
                    $as="h5"
                    $color="contentPrimary"
                    $font="font650"
                    data-baseweb="heading"
                    forwardedRef={null}
                  >
                    <div
                      data-baseweb="heading"
                      styled-component="true"
                      test-style={
                        Object {
                          "color": "$theme.colors.contentPrimary",
                          "fontFamily": "$theme.typography.font650.fontFamily",
                          "fontSize": "$theme.typography.font650.fontSize",
                          "fontWeight": "$theme.typography.font650.fontWeight",
                          "lineHeight": "$theme.typography.font650.lineHeight",
                        }
                      }
                    >
                      Subtitle [L5]
                    </div>
                  </MockStyledComponent>
                </ForwardRef>
              </Block>
            </Block>
          </Heading>
          <HeadingLevel>
            <Heading>
              <Block
                as="h6"
                color="contentPrimary"
                data-baseweb="heading"
                font="font550"
              >
                <Block
                  as="h6"
                  color="contentPrimary"
                  data-baseweb="heading"
                  font="font550"
                  forwardedRef={null}
                >
                  <ForwardRef
                    $as="h6"
                    $color="contentPrimary"
                    $font="font550"
                    data-baseweb="heading"
                  >
                    <MockStyledComponent
                      $as="h6"
                      $color="contentPrimary"
                      $font="font550"
                      data-baseweb="heading"
                      forwardedRef={null}
                    >
                      <div
                        data-baseweb="heading"
                        styled-component="true"
                        test-style={
                          Object {
                            "color": "$theme.colors.contentPrimary",
                            "fontFamily": "$theme.typography.font550.fontFamily",
                            "fontSize": "$theme.typography.font550.fontSize",
                            "fontWeight": "$theme.typography.font550.fontWeight",
                            "lineHeight": "$theme.typography.font550.lineHeight",
                          }
                        }
                      >
                        Subtitle [L6]
                      </div>
                    </MockStyledComponent>
                  </ForwardRef>
                </Block>
              </Block>
            </Heading>
          </HeadingLevel>
        </HeadingLevel>
      </HeadingLevel>
    </HeadingLevel>
    <Heading>
      <Block
        as="h2"
        color="contentPrimary"
        data-baseweb="heading"
        font="font950"
      >
        <Block
          as="h2"
          color="contentPrimary"
          data-baseweb="heading"
          font="font950"
          forwardedRef={null}
        >
          <ForwardRef
            $as="h2"
            $color="contentPrimary"
            $font="font950"
            data-baseweb="heading"
          >
            <MockStyledComponent
              $as="h2"
              $color="contentPrimary"
              $font="font950"
              data-baseweb="heading"
              forwardedRef={null}
            >
              <div
                data-baseweb="heading"
                styled-component="true"
                test-style={
                  Object {
                    "color": "$theme.colors.contentPrimary",
                    "fontFamily": "$theme.typography.font950.fontFamily",
                    "fontSize": "$theme.typography.font950.fontSize",
                    "fontWeight": "$theme.typography.font950.fontWeight",
                    "lineHeight": "$theme.typography.font950.lineHeight",
                  }
                }
              >
                Motivation [L2]
              </div>
            </MockStyledComponent>
          </ForwardRef>
        </Block>
      </Block>
    </Heading>
  </HeadingLevel>
</HeadingLevel>
`;

exports[`Heading styleLevels 1`] = `
<HeadingLevel>
  <Heading
    styleLevel={2}
  >
    <Block
      as="h1"
      color="contentPrimary"
      data-baseweb="heading"
      font="font950"
    >
      <Block
        as="h1"
        color="contentPrimary"
        data-baseweb="heading"
        font="font950"
        forwardedRef={null}
      >
        <ForwardRef
          $as="h1"
          $color="contentPrimary"
          $font="font950"
          data-baseweb="heading"
        >
          <MockStyledComponent
            $as="h1"
            $color="contentPrimary"
            $font="font950"
            data-baseweb="heading"
            forwardedRef={null}
          >
            <div
              data-baseweb="heading"
              styled-component="true"
              test-style={
                Object {
                  "color": "$theme.colors.contentPrimary",
                  "fontFamily": "$theme.typography.font950.fontFamily",
                  "fontSize": "$theme.typography.font950.fontSize",
                  "fontWeight": "$theme.typography.font950.fontWeight",
                  "lineHeight": "$theme.typography.font950.lineHeight",
                }
              }
            >
              Base Web [L1 styled as L2]
            </div>
          </MockStyledComponent>
        </ForwardRef>
      </Block>
    </Block>
  </Heading>
</HeadingLevel>
`;
